fix(decision-engine): address F2 emitter review