@@ -18,16 +18,14 @@ import org.shark.renovatio.shared.domain.Workspace;
 import org.shark.renovatio.shared.emission.EmittedArtifacts;
 import org.shark.renovatio.shared.emission.TargetModel;
 import org.shark.renovatio.shared.nql.NqlQuery;
+import org.shark.renovatio.profile.EffectiveProfileResolver;
 import org.shark.renovatio.profile.MigrationProfiles;
 import org.shark.renovatio.provider.java.emission.JavaEmitter;
 import org.shark.renovatio.semantic.ir.SemanticProgram;
-import org.shark.renovatio.semantic.ir.SourceProvenance;
-import org.shark.renovatio.semantic.ir.SourceSpan;
 import org.springframework.stereotype.Service;
 
 import javax.lang.model.element.Modifier;
 import java.math.BigDecimal;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -38,14 +36,12 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Objects;
 import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Function;
-import java.security.MessageDigest;
-import java.security.NoSuchAlgorithmException;
-import java.util.HexFormat;
 
 /**
  * Java code generation service using JavaPoet
@@ -62,6 +58,8 @@ public class JavaGenerationService {
     private final AnnotationActionItemFactory annotationActionItemFactory;
     private final ManualActionItemWriter manualActionItemWriter;
     private final boolean registryRouting;
+    private final TargetEmitterRegistry emitterRegistry;
+    private final EffectiveProfileResolver effectiveProfileResolver;
     private final CobolSemanticProjector semanticProjector = new CobolSemanticProjector();
 
     public JavaGenerationService(CobolParsingService parsingService,
@@ -69,7 +67,7 @@ public class JavaGenerationService {
                                  CobolIntermediateModelService intermediateModelService,
                                  CobolSemanticTranspiler semanticTranspiler) {
         this(parsingService, templateService, intermediateModelService, semanticTranspiler,
-                new ObjectMapper().findAndRegisterModules(), false);
+                new ObjectMapper().findAndRegisterModules(), false, new TargetEmitterRegistry(List.of()), null);
     }
 
     public JavaGenerationService(CobolParsingService parsingService,
@@ -77,7 +75,8 @@ public class JavaGenerationService {
                                  CobolIntermediateModelService intermediateModelService,
                                  CobolSemanticTranspiler semanticTranspiler,
                                  ObjectMapper objectMapper) {
-        this(parsingService, templateService, intermediateModelService, semanticTranspiler, objectMapper, false);
+        this(parsingService, templateService, intermediateModelService, semanticTranspiler, objectMapper, false,
+                new TargetEmitterRegistry(List.of()), null);
     }
 
     public JavaGenerationService(CobolParsingService parsingService,
@@ -86,6 +85,18 @@ public class JavaGenerationService {
                                  CobolSemanticTranspiler semanticTranspiler,
                                  ObjectMapper objectMapper,
                                  boolean registryRouting) {
+        this(parsingService, templateService, intermediateModelService, semanticTranspiler, objectMapper,
+                registryRouting, new TargetEmitterRegistry(List.of()), null);
+    }
+
+    public JavaGenerationService(CobolParsingService parsingService,
+                                 TemplateCodeGenerationService templateService,
+                                 CobolIntermediateModelService intermediateModelService,
+                                 CobolSemanticTranspiler semanticTranspiler,
+                                 ObjectMapper objectMapper,
+                                 boolean registryRouting,
+                                 TargetEmitterRegistry emitterRegistry,
+                                 EffectiveProfileResolver effectiveProfileResolver) {
         this.parsingService = parsingService;
         this.templateService = templateService;
         this.intermediateModelService = intermediateModelService;
@@ -94,6 +105,9 @@ public class JavaGenerationService {
         this.annotationActionItemFactory = new AnnotationActionItemFactory();
         this.manualActionItemWriter = new ManualActionItemWriter(objectMapper);
         this.registryRouting = registryRouting;
+        this.emitterRegistry = Objects.requireNonNull(emitterRegistry, "emitterRegistry");
+        this.effectiveProfileResolver = effectiveProfileResolver == null
+                ? ignored -> defaultEffectiveProfile() : effectiveProfileResolver;
     }
 
     /**
@@ -103,7 +117,12 @@ public class JavaGenerationService {
         if (!registryRouting) {
             return generateInterfaceStubsLegacy(query, workspace);
         }
-        return generateInterfaceStubs(query, workspace, defaultEffectiveProfile());
+        return generateInterfaceStubs(query, workspace, effectiveProfile(workspace));
+    }
+
+    public MigrationProfiles.EffectiveProfile effectiveProfile(Workspace workspace) {
+        String projectId = workspace == null ? null : workspace.getId();
+        return Objects.requireNonNull(effectiveProfileResolver.resolve(projectId), "effective profile");
     }
 
     /** Routes an effective F1 target envelope through the F2 target registry. */
@@ -111,9 +130,29 @@ public class JavaGenerationService {
                                              MigrationProfiles.EffectiveProfile effective) {
         try {
             Path root = Paths.get(workspace.getPath()).toAbsolutePath().normalize();
-            Path source = parsingService.findCobolSourceFiles(root).stream().sorted().findFirst().orElseThrow();
-            return emitThroughRegistry(source, query, workspace, effective,
-                    semantic -> generateInterfaceStubsLegacy(query, workspace, semantic));
+            List<Path> sources = parsingService.findCobolSourceFiles(root).stream().sorted().toList();
+            if (sources.isEmpty()) return new StubResult(false, "No COBOL source files found");
+            Map<String, String> generatedFiles = new LinkedHashMap<>();
+            Map<String, ManualActionItem> actionItems = new LinkedHashMap<>();
+            for (Path source : sources) {
+                StubResult emitted = emitThroughRegistry(source, query, workspace, effective,
+                        semantic -> generateInterfaceStubsLegacy(query, workspace, semantic, source, false, actionItems));
+                if (!emitted.isSuccess()) return emitted;
+                if (emitted.getGeneratedCode() != null) {
+                    emitted.getGeneratedCode().forEach((path, content) -> putArtifact(generatedFiles, path, content));
+                }
+            }
+            String outputPath = resolveOutputDir(workspace).toString();
+            if (effective.profile().target().language() == org.shark.renovatio.profile.MigrationProfile.Language.JAVA) {
+                manualActionItemWriter.write(root.resolve(ManualActionItemWriter.DEFAULT_REPORT), actionItems.values());
+                outputPath = writeGeneratedFilesToDisk(generatedFiles, workspace);
+            }
+            StubResult result = new StubResult(!generatedFiles.isEmpty(), generatedFiles.isEmpty()
+                    ? "No target files generated"
+                    : "Generated " + generatedFiles.size() + " target files in: " + outputPath);
+            result.setGeneratedCode(generatedFiles);
+            result.setTargetLanguage(effective.profile().target().language().name());
+            return result;
         } catch (TargetEmitterRegistry.TargetEmitterUnavailableException unavailable) {
             throw unavailable;
         } catch (Exception exception) {
@@ -136,9 +175,12 @@ public class JavaGenerationService {
                         ? EmittedArtifacts.fromUtf8(result.getGeneratedCode())
                         : new EmittedArtifacts(List.of());
             });
-            EmittedArtifacts emitted = new TargetEmitterRegistry(List.of(javaEmitter)).emit(targetModel);
+            EmittedArtifacts emitted = emitterRegistry.emit(targetModel, javaEmitter);
             StubResult result = resultReference.get();
-            if (result == null) throw new IllegalStateException("target emitter returned without a provider result");
+            if (result == null) {
+                result = new StubResult(!emitted.artifacts().isEmpty(), emitted.artifacts().isEmpty()
+                        ? "No target files generated" : "Generated " + emitted.artifacts().size() + " target files");
+            }
             if (result.isSuccess()) result.setGeneratedCode(emitted.utf8TextByPath());
             result.setTargetLanguage(effective.profile().target().language().name());
             return result;
@@ -154,11 +196,18 @@ public class JavaGenerationService {
     }
 
     private StubResult generateInterfaceStubsLegacy(NqlQuery query, Workspace workspace) {
-        return generateInterfaceStubsLegacy(query, workspace, null);
+        return generateInterfaceStubsLegacy(query, workspace, null, null, true, null);
     }
 
     private StubResult generateInterfaceStubsLegacy(NqlQuery query, Workspace workspace,
                                                      SemanticProgram semanticProgram) {
+        return generateInterfaceStubsLegacy(query, workspace, semanticProgram, null, true, null);
+    }
+
+    private StubResult generateInterfaceStubsLegacy(NqlQuery query, Workspace workspace,
+                                                     SemanticProgram semanticProgram, Path selectedSource,
+                                                     boolean persist,
+                                                     Map<String, ManualActionItem> collectedActionItems) {
         try {
             // Parse COBOL programs first
             var analyzeResult = parsingService.analyzeCOBOL(query, workspace);
@@ -176,7 +225,9 @@ public class JavaGenerationService {
             for (org.shark.renovatio.provider.cobol.domain.CobolProgram program : programs) {
                 Map<String, Object> metadata = program.getMetadata();
                 String fileName = (String) metadata.get("filePath");
-                String baseName = Paths.get(fileName).getFileName().toString();
+                Path cobolPath = Path.of(fileName).toAbsolutePath().normalize();
+                if (selectedSource != null && !selectedSource.toAbsolutePath().normalize().equals(cobolPath)) continue;
+                String baseName = cobolPath.getFileName().toString();
                 // Clean and sanitize the class base name
                 String classBase = sanitizeClassName(toPascalCase(baseName));
 
@@ -185,9 +236,7 @@ public class JavaGenerationService {
 
                 try {
                     CobolIntermediateModel model = resolveIntermediateModel(metadata);
-                    Path cobolPath = Path.of(fileName);
-                    SemanticProgram currentSemantic = semanticProgram == null ? null
-                            : semanticProgram(cobolPath, query, workspace);
+                    SemanticProgram currentSemantic = semanticProgram;
                     AnnotatedContextResolver.Resolution annotatedResolution = annotatedContextResolver.resolve(
                             new AnnotatedContextResolver.Request(Optional.empty(), Optional.empty(), cobolPath), model);
                     annotatedResolution.diagnostics().stream()
@@ -238,11 +287,15 @@ public class JavaGenerationService {
                 }
             }
 
-            manualActionItemWriter.write(Paths.get(workspace.getPath())
+            if (collectedActionItems != null) {
+                actionItems.forEach(collectedActionItems::putIfAbsent);
+            }
+            if (persist) manualActionItemWriter.write(Paths.get(workspace.getPath())
                     .resolve(ManualActionItemWriter.DEFAULT_REPORT), actionItems.values());
 
             // Write generated files to disk
-            String outputPath = writeGeneratedFilesToDisk(generatedFiles, workspace);
+            String outputPath = persist ? writeGeneratedFilesToDisk(generatedFiles, workspace)
+                    : resolveOutputDir(workspace).toString();
 
             // Debug: print generated keys
             System.out.println("Claves generadas: " + generatedFiles.keySet());
@@ -272,39 +325,11 @@ public class JavaGenerationService {
         Path normalizedSource = source.toAbsolutePath().normalize();
         String relative = root.relativize(normalizedSource).toString().replace('\\', '/');
         byte[] bytes = Files.readAllBytes(normalizedSource);
-        try {
-            CobolIntermediateModel model = intermediateModelService.parse(normalizedSource);
-            AnnotatedContextResolver.Resolution annotated = annotatedContextResolver.resolve(
-                    new AnnotatedContextResolver.Request(Optional.empty(), Optional.empty(), normalizedSource), model);
-            return semanticProjector.project(model, relative, bytes,
-                    Optional.ofNullable(resolveDialect(query, workspace)), annotated.context());
-        } catch (Exception exception) {
-            String fileName = normalizedSource.getFileName().toString();
-            String lowerName = fileName.toLowerCase(Locale.ROOT);
-            if (!lowerName.endsWith(".cpy") && !lowerName.endsWith(".copybook")) {
-                throw exception;
-            }
-            int extension = fileName.lastIndexOf('.');
-            String programId = extension > 0 ? fileName.substring(0, extension) : fileName;
-            String text = new String(bytes, StandardCharsets.UTF_8);
-            String[] lines = text.split("\\R", -1);
-            SourceSpan span = new SourceSpan(relative, 1, 1, Math.max(1, lines.length),
-                    Math.max(1, lines[lines.length - 1].length()));
-            SourceProvenance provenance = new SourceProvenance(relative, sha256(bytes), "COBOL",
-                    Optional.ofNullable(resolveDialect(query, workspace)), List.of());
-            return new SemanticProgram("1", SemanticProgram.Header.create(programId,
-                    SemanticProgram.NodeKind.PROGRAM, "program", span), programId, provenance,
-                    List.of(), List.of(), List.of(), List.of(),
-                    new SemanticProgram.ControlFlow(Optional.empty(), List.of(), List.of()), List.of());
-        }
-    }
-
-    private static String sha256(byte[] bytes) {
-        try {
-            return HexFormat.of().formatHex(MessageDigest.getInstance("SHA-256").digest(bytes));
-        } catch (NoSuchAlgorithmException exception) {
-            throw new IllegalStateException("SHA-256 unavailable", exception);
-        }
+        CobolIntermediateModel model = intermediateModelService.parse(normalizedSource);
+        AnnotatedContextResolver.Resolution annotated = annotatedContextResolver.resolve(
+                new AnnotatedContextResolver.Request(Optional.empty(), Optional.empty(), normalizedSource), model);
+        return semanticProjector.project(model, relative, bytes,
+                Optional.ofNullable(resolveDialect(query, workspace)), annotated.context());
     }
 
     private String resolveDialect(NqlQuery query, Workspace workspace) {
